k8s_cluster/webserver-deploy.yml


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: builong99/blog-server:18
          imagePullPolicy: Always     # Always pull the image
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /opt/resources
              name: webserverdata
      volumes:
        - name: webserverdata
          persistentVolumeClaim:
            claimName: webserver-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: blog
  labels:
    app: webserver
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: webserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  namespace: blog
spec:
  rules:
  - host: webserver.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver-service
            port:
              number: 80
